@@ -1,0 +1,38 @@
+properties{
+  x = 0,
+  y = 0,
+  width = 320,
+  height = 240,
+  min_layer = 0,
+  max_layer = 2,
+  tileset = "castle",
+}
+
+tile{
+  layer = 0,
+  x = 0,
+  y = 0,
+  width = 320,
+  height = 240,
+  pattern = "3",
+}
+
+destination{
+  name = "destination",
+  layer = 0,
+  x = 24,
+  y = 29,
+  direction = 1,
+}
+
+custom_entity{
+  name = "witch",
+  layer = 0,
+  x = 24,
+  y = 77,
+  width = 16,
+  height = 16,
+  direction = 2,
+  sprite = "citizens/witch",
+}
+
