@@ -53,6 +53,7 @@ map{ id = "bugs/877_get_facing_entity", description = "#877: entity:get_facing_e
 map{ id = "bugs/880_custom_entity_set_origin", description = "#880: custom_entity_set_origin() not working" }
 map{ id = "bugs/883_collision_test_not_moving_sprite", description = "#883: Custom entity sprite collision not detected when not moving" }
 map{ id = "bugs/889_crash_use_non_saved_item", description = "#889: Crash when using a non saved item" }
+map{ id = "bugs/937_custom_entity_missing_direction", description = "#937: Error when changing the animation of a custom entity if the direction is missing" }
 map{ id = "dynamic_tile_tests", description = "Dynamic tile tests" }
 map{ id = "jumper_tests", description = "Jumper tests" }
 map{ id = "surface_tests", description = "Surface tests" }
@@ -74,6 +75,7 @@ map{ id = "traversable", description = "Traversable test area" }
 tileset{ id = "castle", description = "Castle" }
 tileset{ id = "overworld", description = "Overworld" }
 
+sprite{ id = "citizens/witch", description = "Witch" }
 sprite{ id = "enemies/enemy_killed", description = "Enemy killed" }
 sprite{ id = "enemies/slime_green", description = "Green Slime" }
 sprite{ id = "enemies/test_enemy", description = "Test enemy" }
